[build-system]
requires = ["hatchling", "hatch-vcs", "nipreps-versions"]
build-backend = "hatchling.build"

[project]
name = "aslprep"
description = "ASLPrep - A Robust Preprocessing Pipeline for ASL Data"
readme = "long_description.rst"
authors = [{name = "The ASLPrep Developers"}]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3.11",
]
license = {file = "LICENSE.md"}
requires-python = ">=3.11"
dependencies = [
    'importlib_resources; python_version < "3.12"',
    "fmriprep == 24.1.0rc2",
    "indexed_gzip <= 1.8.7",
    "looseversion",
    "networkx ~= 3.3",  # nipype needs networkx, but 3+ isn"t compatible with nipype 1.8.5
    "nibabel <= 5.2.1",
    "nilearn ~= 0.10.3",
    "nipype >= 1.8.5",
    "nitransforms >= 21.0.0",
    "niworkflows ~= 1.11.0",
    "numpy >= 1.26",
    "packaging",
    "pandas",
    "psutil <= 6.0.0",
    "pybids <= 0.17.1",
    "requests",
    "sdcflows <= 2.10.0",
    "sentry-sdk <= 2.13.0",
    "smriprep <= 0.16.1",
    "templateflow <= 24.2.0",
    "toml",

]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/PennLINC/aslprep"
Documentation = "https://www.aslprep.readthedocs.io"
Paper = "https://doi.org/10.1038/s41592-022-01458-7"
"Docker Images" = "https://hub.docker.com/r/pennlinc/aslprep/tags/"
NiPreps = "https://www.nipreps.org/"

[project.optional-dependencies]
doc = [
    "doctest-ignore-unicode",
    "lxml_html_clean",
    "m2r",
    "mistune < 4",  # just temporary until m2r addresses this issue
    "nbsphinx",
    "packaging",
    "pydot >= 1.2.3",
    "pydotplus",
    "recommonmark",
    "sphinx >= 6.2.1",
    "sphinx-argparse",
    "sphinx-markdown-tables",
    "sphinx_rtd_theme >= 1.2.2",
    "sphinxcontrib-apidoc",
    "sphinxcontrib-bibtex",
]
test = [
    "codecov",
    "coverage",
    "pytest",
    "pytest-cov",
]
maint = [
    "fuzzywuzzy",
    "python-Levenshtein",
]

# Aliases
all = ["aslprep[doc,maint,test]"]

[project.scripts]
aslprep = "aslprep.cli.run:main"
aslprep-combineqc = "aslprep.cli.aggregate_qc:main"

#
# Hatch configurations
#

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.sdist]
exclude = [".git_archival.txt"]  # No longer needed in sdist

[tool.hatch.build.targets.wheel]
packages = ["aslprep"]
exclude = [
    "aslprep/tests/data",  # Large test data directory
]

##  The following two sections configure setuptools_scm in the hatch way

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "aslprep/_version.py"

#
# Developer tool configurations
#

[tool.black]
line-length = 99
target-version = ["py38"]
exclude = '''
# Directories
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | build
  | dist
  | aslprep/niworkflows
  | aslprep/pybids
  | aslprep/sdcflows
  | aslprep/smriprep
)/
'''

[tool.isort]
profile = "black"
skip_gitignore = true
skip = ["aslprep/niworkflows", "aslprep/pybids", "aslprep/sdcflows", "aslprep/smriprep"]

[tool.flake8]
max-line-length = 99
doctests = "False"
exclude = [
    "*build/",
    "aslprep/_warnings.py",
    "aslprep/config.py",
    "aslprep/data/",
    "aslprep/niworkflows/",
    "aslprep/sdcflows/",
    "aslprep/tests/",
]
ignore = ["D107", "E203", "E402", "E722", "W503", "N803", "N806", "N815"]
per-file-ignores = [
    "**/__init__.py : F401",
    "docs/conf.py : E265",
]

[tool.pytest.ini_options]
addopts = '-m "not examples_pcasl_singlepld_philips and not examples_pcasl_singlepld_siemens and not examples_pcasl_singlepld_ge and not examples_pcasl_multipld and not examples_pasl_multipld and not qtab and not test_001 and not test_002 and not test_003_minimal and not test_003_resampling and not test_003_full"'
markers = [
    "examples_pasl_multipld: mark integration test",
    "examples_pcasl_multipld: mark integration test",
    "examples_pcasl_singlepld_ge: mark integration test",
    "examples_pcasl_singlepld_philips: mark integration test",
    "examples_pcasl_singlepld_siemens: mark integration test",
    "qtab: mark integration test",
    "test_001: mark integration test",
    "test_002: mark integration test",
    "test_003_minimal: mark integration test",
    "test_003_resampling: mark integration test",
    "test_003_full: mark integration test",
]

[tool.coverage.run]
branch = false
omit = [
    "*/tests/*",
    "*/__init__.py",
    "*/conftest.py",
    "aslprep/_version.py"
]

[tool.coverage.report]
# Regexes for lines to exclude from consideration
exclude_lines = [
    'raise NotImplementedError',
    'warnings\.warn',
]
