[metadata]
author = Azeez Adebimpe
author_email = azeez.adebimpe@outlook.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = ASLPREP is a robust and easy-to-use pipeline for preprocessing of diverse ASL data.
license = 3-clause BSD
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
    Documentation=https://aslprep.readthedocs.io/
    Docker Images=https://hub.docker.com/r/pennlinc/aslprep/tags/
url = https://github.com/pennlinc/aslprep

[options]
python_requires = >=3.7
install_requires =
    indexed_gzip >= 0.8.8
    nibabel >= 3.0
    nipype >= 1.4
    nitime
    pyslim
    nitransforms >= 20.0.0rc3,<20.2
    niworkflows ~= 1.3.0
    sentry-sdk >=0.6.9
    pandas >= 0.24.0
    numpy >= 1.17.3 
    psutil >= 5.4
    pybids >= 0.13.2
    pyyaml
    niflow-nipype1-workflows
    sdcflows ~= 1.3.1
    svgutils == 0.3.1
    tedana >= 0.0.9a1, < 0.0.10
    templateflow == 0.6.3 
    toml
test_requires =
    coverage
    codecov
    pytest
packages = find:

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    nbsphinx
    packaging
    pydot >= 1.2.3
    pydotplus
    sphinx >= 1.5.3, < 3
    sphinx-argparse
    sphinx_rtd_theme
    sphinxcontrib-napoleon
docs =
    %(doc)s
duecredit = duecredit
resmon =
sentry = sentry-sdk >=0.6.9
tests =
    coverage
    codecov
    pytest
all =
    %(doc)s
    %(duecredit)s
    %(sentry)s

[options.package_data]
aslprep =
    data/*.json
    data/*.nii.gz
    data/atlas/*/*.nii.gz
    data/atlas/*/*.bib
    data/atlas/*/*.1D
    data/atlas/*/*.txt
    data/tests/*toml
    data/tests/*/*/*/*gz
    data/tests/*/*/*/*json
    data/tests/*/*/*/*tsv
    data/*.mat
    data/boilerplate.bib
    data/itkIdentityTransform.txt
    data/flirtsch/bbr.sch
    data/reports-spec.yml
    pybids/layout/config/*json 
    pybids/layout/tests/data/*json
    pybids/reports/config/*json
    niworkflows/data/*json
    niworkflows/data/*txt
    niworkflows/reports/*tpl
    sdcflows/data/*json
    sdcflows/data/*txt
    sdcflows/data/*mat
    sdcflows/data/*nii.gz
    smriprep/data/*.json
    smriprep/data/*.bib
    smriprep/data/*.txt
    smriprep/data/*.json
    VERSION
    
[options.entry_points]
console_scripts =
    aslprep=aslprep.cli.run:main
    aslprep-combineqc=aslprep.cli.aggregate_qc:main
[versioneer]
VCS = git
style = pep440
versionfile_source = aslprep/_version.py
versionfile_build = aslprep/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = True
exclude=*build/
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501
