[metadata]
author = Azeez Adebimpe
author_email = azeez.adebimpe@outlook.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.8
description = ASLPREP is a robust and easy-to-use pipeline for preprocessing of diverse ASL data.
license = 3-clause BSD
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
    Documentation=https://aslprep.readthedocs.io/
    Docker Images=https://hub.docker.com/r/pennlinc/aslprep/tags/
url = https://github.com/pennlinc/aslprep

[options]
python_requires = >=3.8
install_requires =
    indexed_gzip
    nibabel ~= 5.0
    nipype
    nitransforms
    niworkflows
    numpy ~= 1.24
    pandas
    psutil
    pybids
    pyyaml
    sdcflows ~= 2.2
    sentry-sdk
    smriprep ~= 0.10
    svgutils
    tedana
    templateflow
    toml
packages = find:

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    nbsphinx
    packaging
    pydot >= 1.2.3
    pydotplus
    sphinx >= 1.5.3, < 3
    sphinx-argparse
    sphinx_rtd_theme
    sphinxcontrib-napoleon
tests =
    codecov
    coverage
    pytest
    pytest-cov
all =
    %(doc)s
    %(tests)s

[options.package_data]
aslprep =
    data/*.json
    data/*.nii.gz
    data/atlas/*/*.nii.gz
    data/atlas/*/*.bib
    data/atlas/*/*.1D
    data/atlas/*/*.txt
    data/tests/*toml
    data/tests/*/*/*/*gz
    data/tests/*/*/*/*json
    data/tests/*/*/*/*tsv
    data/*.mat
    data/boilerplate.bib
    data/itkIdentityTransform.txt
    data/flirtsch/bbr.sch
    data/reports-spec.yml
    VERSION

[options.entry_points]
console_scripts =
    aslprep=aslprep.cli.run:main
    aslprep-combineqc=aslprep.cli.aggregate_qc:main

[versioneer]
VCS = git
style = pep440
versionfile_source = aslprep/_version.py
versionfile_build = aslprep/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = True
exclude=*build/,versioneer.py,aslprep/_version.py,aslprep/notebooks/,aslprep/utils/sentry.py,aslprep/tests/
putty-ignore =
    */__init__.py : +F401
    docs/conf.py : +E265
    /^\s*\.\. _.*?: http/ : +E501
extend-ignore = FS002,F841,D205,D103,D400,D403,N806,D401,D412,D100,N803,D202,D200,N802,FS001
