[metadata]
author = Azeez Adebimpe
author_email = azeez.adebimpe@outlook.com
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Image Recognition
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
description = ASLPREP is a robust and easy-to-use pipeline for preprocessing of diverse ASL data.
license = 3-clause BSD
long_description = file:long_description.rst
long_description_content_type = text/x-rst; charset=UTF-8
project_urls =
    Documentation=https://aslprep.readthedocs.io/
    Docker Images=https://hub.docker.com/r/pennlinc/aslprep/tags/
url = https://github.com/pennlinc/aslprep

[options]
python_requires = >=3.7
install_requires =
    indexed_gzip >= 0.8.8
    jinja2 < 3.1
    looseversion == 1.0.3
    networkx ~= 2.8.8  # nipype needs networkx, but 3+ isn't compatible with nipype 1.8.5
    nibabel >= 3.0
    niflow-nipype1-workflows
    nipype >= 1.8.5
    nitime
    nitransforms >= 21.0.0
    niworkflows ~= 1.7.3
    numpy >= 1.17.3
    pandas >= 0.24.0
    patsy
    psutil >= 5.4
    pybids >= 0.13.2
    pyslim
    pyyaml
    sdcflows
    sentry-sdk >= 0.6.9
    smriprep ~= 0.10
    svgutils
    tedana >= 0.0.9a1, < 0.0.10
    templateflow ~= 0.8
    toml
packages = find:

[options.exclude_package_data]
* = tests

[options.extras_require]
datalad = datalad
doc =
    doctest-ignore-unicode
    nbsphinx
    packaging
    pydot >= 1.2.3
    pydotplus
    recommonmark
    sphinx >= 4.2.0
    sphinx-argparse
    sphinx-markdown-tables
    sphinx_rtd_theme
    sphinxcontrib-apidoc
    sphinxcontrib-bibtex
docs =
    %(doc)s
tests =
    codecov
    coverage
    pytest
    pytest-cov
all =
    %(doc)s
    %(tests)s

[options.package_data]
aslprep =
    data/*.json
    data/*.nii.gz
    data/atlas/*/*.nii.gz
    data/atlas/*/*.bib
    data/atlas/*/*.1D
    data/atlas/*/*.txt
    data/*.mat
    data/boilerplate.bib
    data/flirtsch/bbr.sch
    data/reports-spec.yml
    niworkflows/data/*json
    niworkflows/data/*txt
    niworkflows/reports/*tpl
    sdcflows/data/*json
    sdcflows/data/*txt
    sdcflows/data/*mat
    sdcflows/data/*nii.gz
    VERSION

[options.entry_points]
console_scripts =
    aslprep=aslprep.cli.run:main
    aslprep-combineqc=aslprep.cli.aggregate_qc:main

[versioneer]
VCS = git
style = pep440
versionfile_source = aslprep/_version.py
versionfile_build = aslprep/_version.py
tag_prefix =
parentdir_prefix =

[flake8]
max-line-length = 99
doctests = True
exclude=*build/,versioneer.py,aslprep/_version.py,aslprep/utils/sentry.py,aslprep/tests/,aslprep/niworkflows,aslprep/pybids,aslprep/sdcflows,aslprep/smriprep
per-file-ignores =
    */__init__.py : F401
    aslprep/_warnings.py: U100
    aslprep/config.py : N801
    docs/conf.py : E265
    /^\s*\.\. _.*?: http/ : E501
ignore = D107,E203,E402,E722,W503,N803,N806,N815
