[metadata]
name = fmriprep-docker
version = attr: fmriprep_docker.__version__
url = https://github.com/poldracklab/fmriprep
author = The CRN developers
author_email = crn.poldracklab@gmail.com
maintainer = Christopher J. Markiewicz
maintainer_email = crn.poldracklab@gmail.com
license = 3-clause BSD
description = A wrapper for generating Docker commands using regular fMRIPrep syntax
long_description = file:README.rst
long_description_content_type = text/x-rst; charset=UTF-8
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
py_modules = fmriprep_docker
install_requires =
    setuptools <45; python_version < "3.0"

[options.entry_points]
console_scripts =
    fmriprep-docker=fmriprep_docker:main

[bdist_wheel]
universal=1

[flake8]
max-line-length = 99
